package-analytics/main/default/objects/Package__c/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>