package-analytics/main/default/objects/Package__c/fields/PackageCategory__c.field-meta.xml
<CustomField>
    <fullName>PackageCategory__c</fullName>
    <label>Package Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Package2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>