package-analytics/main/default/objects/Package__c/fields/PackageId__c.field-meta.xml
<CustomField>
    <fullName>PackageId__c</fullName>
    <externalId>true</externalId>
    <label>Package ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>