package-analytics/main/default/objects/Package__c/fields/TotalPackageSubscriberOrgs__c.field-meta.xml
<CustomField>
    <fullName>TotalPackageSubscriberOrgs__c</fullName>
    <label>Total Installs</label>
    <summarizedField>PackageVersion__c.TotalPackageSubscriberOrgs__c</summarizedField>
    <summaryForeignKey>PackageVersion__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>