package-analytics/main/default/objects/Package__c/fields/TotalPackageVersions__c.field-meta.xml
<CustomField>
    <fullName>TotalPackageVersions__c</fullName>
    <label>Total Versions</label>
    <summaryForeignKey>PackageVersion__c.Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>