package-analytics/main/default/objects/Package__c/fields/TotalProductionPackageSubscriberOrgs__c.field-meta.xml
<CustomField>
    <fullName>TotalProductionPackageSubscriberOrgs__c</fullName>
    <label>Total Production Installs</label>
    <summarizedField>PackageVersion__c.TotalProductionPackageSubscriberOrgs__c</summarizedField>
    <summaryForeignKey>PackageVersion__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>