package-analytics/main/default/objects/Package__c/fields/TotalReleasedPackageVersions__c.field-meta.xml
<CustomField>
    <fullName>TotalReleasedPackageVersions__c</fullName>
    <label>Total Releases</label>
    <summaryFilterItems>
        <field>PackageVersion__c.ReleaseState__c</field>
        <operation>equals</operation>
        <value>Release, Released</value>
    </summaryFilterItems>
    <summaryForeignKey>PackageVersion__c.Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>