package-analytics/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PackageId__c</columns>
    <columns>NamespacePrefix__c</columns>
    <columns>TotalReleasedPackageVersions__c</columns>
    <columns>LastUpdated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>